--- a/test-site/index.html
+++ b/test-site/index.html
@@ -19,7 +19,7 @@
 <p class="my-class">
 <p>Mozilla是一个全球社区，这里聚集着来自五湖四海的</p>
 <ol>
-<li>技术人员</li>
+<li>技术人员233</li>
 <li>思考者</li>
 <li>建造者</li>
 </ol>
