--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<h1>Hello Java!</h1>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8">
+  <title>er ci yuan jilebu</title>
+  <link rel="stylesheet" href="">
+</head>
+
+<body>
+
+  <header>
+    <h1>listennning dianzi tianlai zhi yin</h1>
+  </header>
+
+
+
+  <nav>
+    <ul>
+      <li>
+        <a href="#">main page</a>
+      </li>
+    </ul>
+
+    <form action="">
+      <input type="search" name="q" placeholder="please search context">
+      <input type="submit" name="" value="search">
+    </form>
+  </nav>
+
+
+
+  <main>
+    <article>
+      <h2>MY</h2>
+      <hr>
+      我是一个诗人<hr>
+      沦为一程序员<hr>
+      十年白发苍苍<hr>
+      技术闻名中外<hr>
+    </article>
+    <aside>
+      <h2>xianggaun lianjie</h2>
+      <ul>
+        <li>
+          <a href="#">this is a href</a>
+        </li>
+      </ul>
+    </aside>
+  </main>
+
+
+
+  <footer>
+    <p>@2050 copyright</p>
+  </footer>
+
+</body>
+</html>
