--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="utf-8">
-  <title>er ci yuan jilebu</title>
-  <link rel="stylesheet" href="">
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mozilla 宣传主页</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700" rel="stylesheet">
+    <link href="styles/mozilla_style.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <h1>Mozilla</h1>
+      <!-- 插入 <img> 元素，链接至较小的 Firefox 标志。 -->
+      <img src="images/firefox_logo-only_RGB120px.png" alt="Firefox logo">
 
-<body>
+    </header>
 
-  <header>
-    <h1>listennning dianzi tianlai zhi yin</h1>
-  </header>
+    <main>
+      <article>
+        <!-- 插入来自 Bilibili 的 <iframe> 元素 -->
+        <iframe width="400" height="225" src="https://player.bilibili.com/player.html?aid=3303261&bvid=BV1rs411d7hC&cid=5221342&page=2" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+        <h2>自由网络 尽情驰骋</h2>
 
+        <p>Mozilla 是一个全球社区，这里聚集着来自五湖四海的 技术人员、思考者、建造者。我们致力于让 Internet 保持活力，保持畅通，人人皆可贡献，人人皆可创造。我们坚信：开放平台的协作对于人的发展至关重要，也决定着我们共同的未来。</p>
 
+        <p>更多精彩信息，敬请点击下方图片。<a href="https://www.flickr.com/photos/mathiasappel/21675551065/">小熊猫照片</a>由 Mathias Appel 拍摄</p>
+      </article>
 
-  <nav>
-    <ul>
-      <li>
-        <a href="#">main page</a>
-      </li>
-    </ul>
+      <div class="further-info">
+        <!-- 插入包含 srcsets 和 sizes 属性的图像 -->
+        <a href="https://www.mozilla.org/zh-CN/firefox/new/">
+          <img srcset="images/firefox_logo-only_RGB120px.png 120w,
+          images/firefox_logo-only_RGB400px.png 400w"
+          sizes="(max-width:500px) 120px,400px"
+          src="images/firefox_logo-only_RGB400px.png"
+          alt="下载 Firefox"
+          >
+        </a>
+        <a href="https://www.mozilla.org/">
+          <img srcset="images/mozilla-dinosaur-head120px.png 120w,
+          images/mozilla-dinosaur-head400px.png 400w"
+          sizes="(max-width:500px) 120px,400px"
+          src="images/mozilla-dinosaur-head400px.png"
+          alt="Mozilla 更多信息">
+        </a>
+        <a href="https://addons.mozilla.org/">
+          <img srcset="images/firefox-addons120px.jpg 120w,
+                        images/firefox-addons400px.jpg 400w"
+          sizes="(max-width:500px) 120px,400px"
+          src="images/firefox-addons400px.jpg"
+          alt="使用扩展使得Firefox">
+        </a>
+        <a href="https://developer.mozilla.org/zh-CN/">
+          <img src="images/mdn.svg" alt="访问MDN学习WEB">
+        </a>
+        <div class="clearfix"></div>
+      </div>
 
-    <form action="">
-      <input type="search" name="q" placeholder="please search context">
-      <input type="submit" name="" value="search">
-    </form>
-  </nav>
+      <div class="red-panda">
+        <!-- 插入照片元素 -->
+        <picture>
+            <source media="(max-width:600px)"
+            srcset="images/red-panda600px.jpg">
+            <img src="images/red-panda1200px.jpg" alt="小熊猫">
+        </picture>
+      </div>
 
-
-
-  <main>
-    <article>
-      <h2>MY</h2>
-      <hr>
-      我是一个诗人<hr>
-      沦为一程序员<hr>
-      十年白发苍苍<hr>
-      技术闻名中外<hr>
-    </article>
-    <aside>
-      <h2>xianggaun lianjie</h2>
-      <ul>
-        <li>
-          <a href="#">this is a href</a>
-        </li>
-      </ul>
-    </aside>
-  </main>
-
-
-
-  <footer>
-    <p>@2050 copyright</p>
-  </footer>
-
-</body>
+    </main>
+  </body>
 </html>
